新增 SkullItem 2種獲取方式